--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,37 +1,39 @@
 ﻿<Window x:Class="Windows_11_Compatibility_Checker_WPF.MainWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:windows_11_compatibility_checker_wpf="clr-namespace:Windows_11_Compatibility_Checker_WPF"
-	Title="Windows 11 Compatibility Checker" Width="704.557" Height="534.666666666667"
+	Title="Windows 11 Compatibility Checker" Width="704.557" Height="555.666666666667"
     WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid Height="489" Width="649">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="280*"/>
-            <RowDefinition Height="209*"/>
-        </Grid.RowDefinitions>
-        <Label Name="biosModeText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="24" Margin="0,0,0,170.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1" >BIOS Mode: Checking</Label>
-        <Button Name="aboutButton" Height="31" Width="106" TabIndex="23" Click="aboutButton_Click" Margin="0,0,533,18.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" FontSize="16" Grid.Row="1" >About</Button>
-        <Label Name="screenResolutionText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="21" Margin="0,0,0,72.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1" >Screen Resolution: Checking</Label>
-        <Button Name="darkModeButton" Height="31" Width="106" TabIndex="20" Click="darkModeButton_Click" Margin="0,0,10,18" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="16" FontFamily="Segoe UI Variable Display" Grid.Row="1" >Dark Mode</Button>
-        <Label Name="notificationText" Height="34" Width="663" FontSize="17.333" TabIndex="19" Margin="0,0,-194,244" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" >No new alerts from the checker. Nice!</Label>
-        <Label Name="tpmText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="16" Margin="0,0,0,104.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1" >TPM: Checking</Label>
-        <Label Name="storageText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="14" Margin="0,0,0,203.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.RowSpan="2" >Storage: Checking</Label>
-        <Label Name="cpuArchitectureText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="10" Margin="0,0,0,27" HorizontalAlignment="Right" VerticalAlignment="Bottom" >CPU Architecture: Checking</Label>
-        <Label Name="secureBootText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display " TabIndex="8" Margin="0,0,0,137.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="1" >Secure Boot Status: Checking</Label>
-        <Label Name="gpuText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="6" Margin="0,0,0,60" HorizontalAlignment="Right" VerticalAlignment="Bottom" >GPU: Checking</Label>
-        <Label Name="memoryAmount" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="4" Margin="0,0,0,95" HorizontalAlignment="Right" VerticalAlignment="Bottom" >RAM: Checking</Label>
-        <Label Name="cpuName" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" TabIndex="2" Margin="0,0,0,127" HorizontalAlignment="Right" VerticalAlignment="Bottom" >CPU: Checking</Label>
-        <Label Name="yourSpecsTitle" Height="37" Width="119" FontSize="20" FontFamily="Segoe UI Variable Display" TabIndex="1" Margin="0,0,503,157" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Your Specs:</Label>
-        <Label Name="Title" Height="46" Width="640" FontSize="26.667" FontFamily="Segoe UI Variable Display" TabIndex="0" Margin="0,0,-14,198" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontWeight="Bold" >Windows 11 Compatibility at a glance</Label>
-        <Image x:Name="cpuStatus" HorizontalAlignment="Left" Height="26" Margin="33,125,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
-        <Image x:Name="ramImage" HorizontalAlignment="Left" Height="26" Margin="33,157,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
-        <Image x:Name="gpuStatus" HorizontalAlignment="Left" Height="26" Margin="33,192,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
-        <Image x:Name="cpuArchitectureStatus" HorizontalAlignment="Left" Height="26" Margin="33,224,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
-        <Image x:Name="storageImage" HorizontalAlignment="Left" Height="26" Margin="33,257,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None" Grid.RowSpan="2"/>
-        <Image x:Name="biosModeStatus" HorizontalAlignment="Left" Height="26" Margin="33,10,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None" Grid.Row="1"/>
-        <Image x:Name="secureBootStatus" HorizontalAlignment="Left" Height="26" Margin="33,43,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None" Grid.Row="1"/>
-        <Image x:Name="tpmStatus" HorizontalAlignment="Left" Height="26" Margin="33,76,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None" Grid.Row="1"/>
-        <Image x:Name="screenResolutionStatus" HorizontalAlignment="Left" Height="26" Margin="33,108,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None" Grid.Row="1"/>
-        <Image x:Name="notificationStatus" HorizontalAlignment="Left" Height="26" Margin="151,9,0,0" VerticalAlignment="Top" Width="29" Source="/Resources/WindowsSuccess (Custom).png" Stretch="None"/>
-        <Button x:Name="aboutButton_Copy" Height="31" Width="172" TabIndex="23" Click="sysRequirementsButton_Click" Margin="0,0,234,18.333" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" FontSize="16" Content="System Requirements" Grid.Row="1" RenderTransformOrigin="1.6,0.763" />
+    <Grid>
+        <Label Name="biosModeText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,198" HorizontalAlignment="Right" VerticalAlignment="Bottom" >BIOS Mode: Checking</Label>
+        <Button Name="aboutButton" Height="31" Width="106" Click="aboutButton_Click" Margin="0,0,555.333,53" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" FontSize="16" >About</Button>
+        <Label Name="screenResolutionText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,100" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Screen Resolution: Checking</Label>
+        <Button Name="darkModeButton" Height="31" Width="106" Click="darkModeButton_Click" Margin="0,0,32.333,53" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="16" FontFamily="Segoe UI Variable Display" >Dark Mode</Button>
+        <Label Name="notificationText" Height="34" Width="663" FontSize="17.333" Margin="0,0,-165.667,474" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" >No new alerts from the checker. Nice!</Label>
+        <Label Name="tpmText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,132" HorizontalAlignment="Right" VerticalAlignment="Bottom" >TPM: Checking</Label>
+        <Label Name="storageText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,231" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Storage: Checking</Label>
+        <Label Name="cpuArchitectureText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,264" HorizontalAlignment="Right" VerticalAlignment="Bottom" >CPU Architecture: Checking</Label>
+        <Label Name="secureBootText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display " Margin="0,0,0.333,165" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Secure Boot Status: Checking</Label>
+        <Label Name="gpuText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,297" HorizontalAlignment="Right" VerticalAlignment="Bottom" >GPU: Checking</Label>
+        <Label Name="memoryAmount" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,332" HorizontalAlignment="Right" VerticalAlignment="Bottom" >RAM: Checking</Label>
+        <Label Name="cpuName" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,0.333,364" HorizontalAlignment="Right" VerticalAlignment="Bottom" >CPU: Checking</Label>
+        <Label Name="yourSpecsTitle" Height="37" Width="119" FontSize="20" FontFamily="Segoe UI Variable Display" Margin="0,0,503.333,394" HorizontalAlignment="Right" VerticalAlignment="Bottom" >Your Specs:</Label>
+        <Label Name="Title" Height="46" Width="640" FontSize="26.667" FontFamily="Segoe UI Variable Display" Margin="0,0,-13.667,427" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontWeight="Bold" >Windows 11 Compatibility at a glance</Label>
+        <Image x:Name="cpuStatus" HorizontalAlignment="Left" Height="26" Margin="75,127,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="ramImage" HorizontalAlignment="Left" Height="26" Margin="75,159,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="gpuStatus" HorizontalAlignment="Left" Height="26" Margin="75,194,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="cpuArchitectureStatus" HorizontalAlignment="Left" Height="26" Margin="75,226,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="storageImage" HorizontalAlignment="Left" Height="26" Margin="75,259,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="biosModeStatus" HorizontalAlignment="Left" Height="26" Margin="75,292,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="secureBootStatus" HorizontalAlignment="Left" Height="26" Margin="75,325,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="tpmStatus" HorizontalAlignment="Left" Height="26" Margin="75,358,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="screenResolutionStatus" HorizontalAlignment="Left" Height="26" Margin="75,390,0,0" VerticalAlignment="Top" Width="25" Source="/Resources/WindowsHelp (Custom).png" Stretch="None"/>
+        <Image x:Name="notificationStatus" HorizontalAlignment="Left" Height="26" Margin="163,17,0,0" VerticalAlignment="Top" Width="29" Source="/Resources/WindowsSuccess (Custom).png" Stretch="None"/>
+        <Button x:Name="aboutButton_Copy" Height="31" Width="172" TabIndex="23" Click="sysRequirementsButton_Click" Margin="0,0,256.333,53" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Variable Display" FontSize="16" Content="System Requirements" RenderTransformOrigin="1.6,0.763" />
+        <Image x:Name="greenTick" HorizontalAlignment="Left" Height="26" Margin="17,480,0,0" VerticalAlignment="Top" Width="25" Source="pack://application:,,,/Resources/WindowsSuccess (Custom).png" Stretch="None"/>
+        <Label x:Name="greenTickText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,58.333,10" HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Meets soft requirements" />
+        <Image x:Name="warningIcon" HorizontalAlignment="Left" Height="26" Margin="250,480,0,0" VerticalAlignment="Top" Width="25" Source="pack://application:,,,/Resources/WindowsWarning (Custom).png" Stretch="None"/>
+        <Label x:Name="warningIconText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,-170.667,10" HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Meets hard requirements only" />
+        <Image x:Name="errorIcon" HorizontalAlignment="Left" Height="26" Margin="523,480,0,0" VerticalAlignment="Top" Width="25" Source="pack://application:,,,/Resources/WindowsCritical (Custom).png" Stretch="None"/>
+        <Label x:Name="errorIconText" Height="34" Width="586" FontSize="17.333" FontFamily="Segoe UI Variable Display" Margin="0,0,-445.667,10" HorizontalAlignment="Right" VerticalAlignment="Bottom" Content="Does not meet" />
     </Grid>
 </Window>
