--- a/src/DebugWindow.xaml
+++ b/src/DebugWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="___No_Name_" x:Class="Windows_11_Compatibility_Checker_WPF.Window3"
+﻿<Window x:Name="___No_Name_" x:Class="Windows_11_Compatibility_Checker_WPF.DebugWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
